--- a/app/views/map.html
+++ b/app/views/map.html
@@ -1,6 +1,3 @@
-<!--Giving the div an id="map_canvas" fix problems with twitter bootstrap affecting
-            google maps-->
-
 <google-map
         center="search.center"
         zoom="search.zoom"
@@ -9,3 +6,5 @@
         options="options"
         events="events">
 </google-map>
+
+<!--<alert-box></alert-box>-->
