--- a/app/views/alert-box.html
+++ b/app/views/alert-box.html
@@ -1,2 +1,5 @@
 <div class="alert-box-overlay"></div>
-<div class="alert-box"></div>
+        <div class="alert-box-parent">
+            <div class="alert-box"></div>
+        </div>
+
