--- a/app/views/search.html
+++ b/app/views/search.html
@@ -2,7 +2,7 @@ SEARCH
 <br>
 <a href="#/search/list?zoom=11&center=36,-122">List</a>
 <a href="#/search/map?zoom=11&center=36,-122">Map</a>
-<a href="#/search/poop?zoom=11&center=36,-122">Poop</a>
+<a href="#/search/grid?zoom=11&center=36,-122">Grid</a>
 HERE BE MY FILTERS
         <br>
 
