--- a/app/views/map.html
+++ b/app/views/map.html
@@ -1,11 +1,11 @@
 This page has a map.
 <google-map
-        center="search.center"
+        center="search.bounds.getCenter()"
         zoom="search.zoom"
         fit="false"
         draggable="true"
         options="options"
-        events="events">
+       >
 </google-map>
 
 <alert-box></alert-box>
