alerts are my bitch

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -10,6 +10,6 @@ This page has a map.
             events="events">
     </google-map>
 
-    <alert-box-dir ng-show="isCreatingAlert"></alert-box-dir>
+    <alert-box-dir ng-show="isCreatingAlert && isArea"></alert-box-dir>
 
 </search-map-dir>
