--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,8 +1,7 @@
 SEARCH
 <br>
-<a href="#/search/list">List</a>
-<a href="#/search/map">Map</a>
-<a href="#/search/grid">Grid</a>
+<a href="#/search/list?{{ generateUrl() }}">List</a>
+<a href="#/search/map?{{ generateUrl() }}">Map</a>
 
 HERE BE MY FILTERS
         <br>
