page swiping and arrow nav working

--- a/app/views/search.html
+++ b/app/views/search.html
@@ -4,6 +4,8 @@ SEARCH
 <a href="#/search/map">Map</a>
 <a href="#/search/grid">Grid</a>
 
+<a href="#/search/map/listing/8225329">Full Listing</a>
+
 HERE BE MY FILTERS
         <br>
 
